feat: Implement LLM request concurrency and rate limiting with configurable parameters and dedicated tests.

--- a/deep_research_project/.env.example
+++ b/deep_research_project/.env.example
@@ -27,6 +27,14 @@ LLM_MAX_TOKENS=1024
 # LLM_TEMPERATURE: Controls the randomness of the LLM's output. Lower is more deterministic. (0.0 to 2.0)
 LLM_TEMPERATURE=0.7
 
+# LLM Rate Limiting
+# -----------------
+# LLM_MAX_RPM: Maximum requests per minute for the LLM provider.
+LLM_MAX_RPM=60
+
+# LLM_MAX_PARALLEL_REQUESTS: Maximum concurrent requests to the LLM.
+LLM_MAX_PARALLEL_REQUESTS=5
+
 # OpenAI Specific Configuration (used if LLM_PROVIDER="openai")
 # -----------------------------
 # OPENAI_API_KEY: Your OpenAI API key. Often set directly in the environment for security.
