並列化の実装: 長文のチャンク要約処理を並列化しました。 ナレッジグラフ抽出とリフレクション処理を並列化しました。 レートリミットの実装: 一分間あたりのリクエスト数（RPM）を制限する機能を LLMClient  に追加しました。並列化してもAPI制限を超過しないように制御されます。 設定の追加: .env  ファイルで MAX_CONCURRENT_CHUNKS（最大同時実行数、デフォルト4）と LLM_RATE_LIMIT_RPM（RPM制限、デフォルト60）を設定できるようにしました。
 UI項目の追加:
Max Concurrent Chunks: 同時実行チャンク数（スライダー: 1〜10）
LLM Rate Limit (RPM): 1分間のリクエスト制限数（スライダー: 1〜120）
設定反映:
スライダーを動かして「Update」すると、即座に設定値が反映されるようになっています。

--- a/deep_research_project/.env.example
+++ b/deep_research_project/.env.example
@@ -97,6 +97,13 @@ SUMMARIZATION_CHUNK_OVERLAP_CHARS=500
 # If "false", PDF links are skipped. Requires `pypdf` to be installed.
 PROCESS_PDF_FILES="True"
 
+# Optimization Configuration
+# --------------------------
+# MAX_CONCURRENT_CHUNKS: Max number of chunk summarization tasks to run in parallel.
+MAX_CONCURRENT_CHUNKS=5
+# LLM_RATE_LIMIT_RPM: Max requests per minute to the LLM API.
+LLM_RATE_LIMIT_RPM=60
+
 
 # UI / Interactive Mode (These are typically not set via .env for Streamlit, but shown for completeness)
 # ----------------------------------------------------------------------------------------------------
