docs: Update example environment variables in .env.example.

--- a/deep_research_project/.env.example
+++ b/deep_research_project/.env.example
@@ -1,121 +1,149 @@
-# General Application Configuration
+# General Application Configuration / 全般設定
 # ---------------------------------
+# レポートのデフォルト出力ファイル名。
 # OUTPUT_FILENAME="my_research_report.md"
-# LOG_LEVEL="INFO" # Options: DEBUG, INFO, WARNING, ERROR
 
-# UI Port Configuration (Optional)
+# ログ出力レベル。DEBUG, INFO, WARNING, ERROR から選択。
+# LOG_LEVEL="INFO"
+
+# デフォルトの言語設定（レポート作成や要約で使用）。
+# DEFAULT_LANGUAGE="Japanese"
+
+# レポートが保存されるディレクトリ。
+# REPORT_DIR="temp_reports"
+
+# 一時ファイルのクリーンアップ対象となる保持期間（秒）。
+# CLEANUP_AGE_SECONDS=86400 # 24時間
+
+
+# UI Port Configuration / UIポート設定 (任意)
 # ---------------------------------
+# Chainlit UIが使用するポート番号。デフォルトは8000。
 # CHAINLIT_PORT=8000
+
+# Streamlit UIが使用するポート番号。デフォルトは8501。
 # STREAMLIT_SERVER_PORT=8501
 
-# LLM Configuration
+
+# LLM Configuration / LLM設定
 # -----------------
-# LLM_PROVIDER: Specifies the LLM provider.
-# Options: "openai", "azure_openai", "ollama", "placeholder_llm" (default if not set)
+# LLMプロバイダーの選択。
+# 指定可能な値: "openai", "azure_openai", "ollama", "placeholder_llm"
 LLM_PROVIDER="openai"
 
-# LLM_MODEL: The model name or identifier for the selected provider.
-# - For OpenAI: e.g., "gpt-3.5-turbo", "gpt-4"
-# - For Azure OpenAI: This should be your Azure Deployment Name (see AZURE_OPENAI_DEPLOYMENT_NAME below, this value will be overridden by it if provider is azure_openai)
-# - For Ollama: e.g., "llama2", "mistral"
-# - For placeholder_llm: "default_model_name" (or any, it's simulated)
-LLM_MODEL="gpt-3.5-turbo"
+# 選択したプロバイダーのモデル名。
+# - OpenAIの場合: "gpt-3.5-turbo", "gpt-4", "gpt-4o" など
+# - Azure OpenAIの場合: デプロイ名（AZURE_OPENAI_DEPLOYMENT_NAMEで上書きされます）
+# - Ollamaの場合: "llama3", "mistral", "phi3" など
+LLM_MODEL="gpt-4o-mini"
 
-# LLM_MAX_TOKENS: Maximum number of tokens the LLM should generate in a single response.
-LLM_MAX_TOKENS=1024
+# LLMが1回のリクエストで生成する最大トークン数。
+LLM_MAX_TOKENS=2048
 
-# LLM_TEMPERATURE: Controls the randomness of the LLM's output. Lower is more deterministic. (0.0 to 2.0)
+# LLM出力のランダム性を制御します。値が低いほど決定的になります (0.0 から 2.0)。
 LLM_TEMPERATURE=0.7
 
-# OpenAI Specific Configuration (used if LLM_PROVIDER="openai")
+
+# OpenAI Specific Configuration / OpenAI個別設定
 # -----------------------------
-# OPENAI_API_KEY: Your OpenAI API key. Often set directly in the environment for security.
+# OpenAI APIキー。
 # OPENAI_API_KEY="sk-..."
 
-# OPENAI_BASE_URL: Optional. Use for OpenAI-compatible proxies like LiteLLM or local LLMs.
-# (Also supported as OPENAI_API_BASE_URL)
-# If set, it will override the default OpenAI API URL.
-# Example: OPENAI_BASE_URL="http://localhost:8000/v1"
+# APIのベースURL。LiteLLMやローカルLLMなどのプロキシを使用する場合に指定。
+# OPENAI_BASE_URL="http://localhost:8000/v1"
 OPENAI_BASE_URL=
 
-# Azure OpenAI Specific Configuration (used if LLM_PROVIDER="azure_openai")
-# ----------------------------------
-# Uncomment and provide your Azure OpenAI details if using this provider.
-# AZURE_OPENAI_API_KEY=""
-# AZURE_OPENAI_ENDPOINT="" # e.g., https://your-resource-name.openai.azure.com/
-# AZURE_OPENAI_API_VERSION="" # e.g., "2023-07-01-preview", "2023-12-01-preview"
-# AZURE_OPENAI_DEPLOYMENT_NAME="" # Your model deployment name in Azure. This will be used as the effective model.
 
-# Ollama Specific Configuration (used if LLM_PROVIDER="ollama")
+# Azure OpenAI Specific Configuration / Azure OpenAI個別設定
+# ----------------------------------
+# AZURE_OPENAI_API_KEY=""
+# AZURE_OPENAI_ENDPOINT="" # 例: https://your-resource-name.openai.azure.com/
+# AZURE_OPENAI_API_VERSION="" # 例: "2024-02-15-preview"
+# AZURE_OPENAI_DEPLOYMENT_NAME="" # Azureでのモデルデプロイ名
+
+
+# Ollama Specific Configuration / Ollama個別設定
 # -----------------------------
-# OLLAMA_BASE_URL: Optional. Base URL for the Ollama service.
-# Defaults to http://localhost:11434 if Ollama is running locally and this is not set.
+# OllamaサービスのベースURL。
+# デフォルトは http://localhost:11434 です。
 # OLLAMA_BASE_URL="http://localhost:11434"
 
 
-# Search Configuration
+# Search Configuration / 検索設定
 # --------------------
-# SEARCH_API: The search engine to use.
-# Options: "duckduckgo" (default), "tavily", "searxng"
+# 使用する検索エンジン。
+# 指定可能な値: "duckduckgo" (デフォルト), "tavily", "searxng"
 SEARCH_API="duckduckgo"
 
-# TAVILY_API_KEY: Required if SEARCH_API="tavily".
+# SEARCH_API="tavily" の場合に必要。
 # TAVILY_API_KEY=""
 
-# SEARXNG_BASE_URL: Required if SEARCH_API="searxng".
-# Defaults to http://localhost:8080 if not set.
+# SEARCH_API="searxng" の場合に必要。
+# デフォルトは http://localhost:8080 です。
 # SEARXNG_BASE_URL="http://localhost:8080"
 
+# SearxNG固有の設定
+# SEARXNG_LANGUAGE="ja-JP"
+# SEARXNG_SAFESEARCH=1 # 0: Off, 1: Moderate, 2: Strict
+# SEARXNG_CATEGORIES="general"
 
-# Research Loop Configuration
+
+# Research Loop Configuration / リサーチループ設定
 # ---------------------------
-# MAX_RESEARCH_LOOPS: Maximum number of research cycles (query -> search -> summarize -> reflect) to perform.
+# 最大リサーチループ回数（クエリ生成 -> 検索 -> 要約 -> 内省のサイクル）。
 MAX_RESEARCH_LOOPS="3"
 
-# MAX_SEARCH_RESULTS_PER_QUERY: Maximum number of search results to fetch for each query.
-MAX_SEARCH_RESULTS_PER_QUERY="3"
+# 1つのクエリに対して取得する最大検索結果数。
+MAX_SEARCH_RESULTS_PER_QUERY="5"
+
+# 検索クエリに含まれる最大単語数。
+# MAX_QUERY_WORDS=15
+
+# 生成されるリサーチプランの最小/最大セクション数。
+# RESEARCH_PLAN_MIN_SECTIONS=3
+# RESEARCH_PLAN_MAX_SECTIONS=10
 
 
-# Content Processing Configuration
+# Content Processing Configuration / コンテンツ処理設定
 # --------------------------------
-# USE_SNIPPETS_ONLY_MODE: If "true", only search result snippets are used for summarization (faster, less detail).
-# If "false", attempts to download and process full content from URLs.
+# 検索結果のスニペットのみを使用するかどうか。
+# "true" の場合、高速ですが詳細さは低下します。"false" の場合、URLから全文取得を試みます。
 USE_SNIPPETS_ONLY_MODE="False"
 
-# MAX_TEXT_LENGTH_PER_SOURCE_CHARS: Maximum characters to process per web source (0 for unlimited).
-# Truncation occurs before chunking.
-MAX_TEXT_LENGTH_PER_SOURCE_CHARS=0
+# 1つのソースから処理する最大文字数（0は無制限）。
+# チャンク分割の前にこの長さで切り捨てられます。
+MAX_TEXT_LENGTH_PER_SOURCE_CHARS=15000
 
-# SUMMARIZATION_CHUNK_SIZE_CHARS: Size of text chunks for summarization (chars).
-# Larger chunks preserve more context but may exceed model limits.
-SUMMARIZATION_CHUNK_SIZE_CHARS=10000
+# コンテンツ取得時のタイムアウト秒数。
+# RETRIEVAL_TIMEOUT=15
 
-# SUMMARIZATION_CHUNK_OVERLAP_CHARS: Overlap between consecutive chunks (chars).
+# HTTPリクエスト時に使用するUser-Agentヘッダー。
+# USER_AGENT="DeepResearchBot/1.0"
+
+# 要約処理時のチャンクサイズ（文字数）。
+# チャンクが大きいほど文脈が維持されますが、LLMの制限に注意が必要です。
+SUMMARIZATION_CHUNK_SIZE_CHARS=8000
+
+# 連続するチャンク間のオーバーラップ（重なり）文字数。
 SUMMARIZATION_CHUNK_OVERLAP_CHARS=500
 
-# PROCESS_PDF_FILES: If "true", attempts to download and extract text from PDF links.
-# If "false", PDF links are skipped. Requires `pypdf` to be installed.
+# PDFファイルをダウンロードしてテキストを抽出するかどうか。
+# 実行には `pypdf` ライブラリが必要です。
 PROCESS_PDF_FILES="True"
 
-# Optimization Configuration
+
+# Optimization Configuration / 最適化設定
 # --------------------------
-# MAX_CONCURRENT_CHUNKS: Max number of chunk summarization tasks to run in parallel.
-MAX_CONCURRENT_CHUNKS=5
-# LLM_RATE_LIMIT_RPM: Max requests per minute to the LLM API.
+# 並列実行するチャンク要約タスクの最大数。
+MAX_CONCURRENT_CHUNKS=4
+
+# LLM APIへの1分間あたりのリクエスト制限（RPM）。
+# APIプロバイダーの制限に合わせて調整してください。
 LLM_RATE_LIMIT_RPM=60
 
 
-# UI / Interactive Mode (These are typically not set via .env for Streamlit, but shown for completeness)
-# ----------------------------------------------------------------------------------------------------
-# INTERACTIVE_MODE: Controls if the research loop requires manual approval for steps.
-# "true" for interactive (manual approval), "false" for automated.
-# For CLI runs, this can be set. For Streamlit, it's controlled by a UI toggle.
-# INTERACTIVE_MODE="True"
-
-# Note: For sensitive keys like OPENAI_API_KEY or AZURE_OPENAI_API_KEY,
-# it's often recommended to set them directly as environment variables in your system
-# or use a secrets management solution, rather than hardcoding them in a .env file,
-# especially if this file might be shared or version-controlled (even if it's .env.example).
-# However, for local development, .env files (loaded by python-dotenv) are common.
-# Ensure your actual .env file (if used) is in .gitignore.
-# The .env.example file serves as a template and should not contain real secrets.
+# Interactive Mode / インタラクティブモード
+# ----------------------------------------
+# 各ステップの実行前にユーザーの承認を必要とするかどうか。
+# CLI実行時に有効。UIではスイッチで制御される場合があります。
+# INTERACTIVE_MODE="False"
